versions/v3.6.0/doxygen/html/globals_z.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/globals_z.html
original_path: doxygen/html/globals_z.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all functions, variables, defines, enums, and typedefs with links to the files they belong to:

### - z -

- zassert : [ztest\_assert.h](group__ztest__assert.md#ga0911ad9e94cdf1fe011d21316683ee7f)
- zassert\_between\_inclusive : [ztest\_assert.h](group__ztest__assert.md#ga2b6b41de3e4856b21458febab3261b91)
- zassert\_equal : [ztest\_assert.h](group__ztest__assert.md#gacd075c7ee4dc2d64701bd3098a31b673)
- zassert\_equal\_ptr : [ztest\_assert.h](group__ztest__assert.md#gabf20273fcba9cc45939a9f7db77f0bfc)
- zassert\_false : [ztest\_assert.h](group__ztest__assert.md#ga7330d1794fb961e07ee40294019dead0)
- zassert\_is\_null : [ztest\_assert.h](group__ztest__assert.md#gac0839891fd8bb7313b98551465e04c19)
- zassert\_mem\_equal : [ztest\_assert.h](group__ztest__assert.md#gabbfcf6345172387326d35b5d0e2bb051)
- zassert\_mem\_equal\_\_ : [ztest\_assert.h](group__ztest__assert.md#ga30e5fefa185944d3e949d4023c2eea27)
- zassert\_not\_equal : [ztest\_assert.h](group__ztest__assert.md#ga43f306bf33d5e837b8927df16b82a363)
- zassert\_not\_null : [ztest\_assert.h](group__ztest__assert.md#ga849adad4afe893a7ae3dc2fbe750dc00)
- zassert\_not\_ok : [ztest\_assert.h](group__ztest__assert.md#gafe0e2609f77906ab0caddc31448a4fc8)
- zassert\_ok : [ztest\_assert.h](group__ztest__assert.md#gade40e2ec78ec813739e7725524fae7f0)
- zassert\_true : [ztest\_assert.h](group__ztest__assert.md#gaeebddde19012223e3d5e853a1dac3ac5)
- zassert\_unreachable : [ztest\_assert.h](group__ztest__assert.md#ga300684a6b56e73e2cad6fd7458541129)
- zassert\_within : [ztest\_assert.h](group__ztest__assert.md#gacc930af1a66e8533c5eca9526e198b4b)
- zassume : [ztest\_assert.h](group__ztest__assert.md#ga5a4319eec770be532f34acb86e022c48)
- zassume\_between\_inclusive : [ztest\_assert.h](group__ztest__assume.md#gacff02eeba8dd334b3727dbe2036617e3)
- zassume\_equal : [ztest\_assert.h](group__ztest__assume.md#ga88c2a3153568a6f621b88dd6ceeb48d6)
- zassume\_equal\_ptr : [ztest\_assert.h](group__ztest__assume.md#ga78d6fbbf5eb13b32a5164053811b6cca)
- zassume\_false : [ztest\_assert.h](group__ztest__assume.md#ga5acf4256e5af3afaed06da7400dc3ad5)
- zassume\_is\_null : [ztest\_assert.h](group__ztest__assume.md#ga3c5b1814deb5974e8ba0af961b516fa0)
- zassume\_mem\_equal : [ztest\_assert.h](group__ztest__assume.md#ga62be45256399530167745e71226e4a37)
- zassume\_mem\_equal\_\_ : [ztest\_assert.h](group__ztest__assume.md#gaaed6045f194ead4ffe1dd72a6fa5175d)
- zassume\_not\_equal : [ztest\_assert.h](group__ztest__assume.md#ga0d90bb874c3135ffee870a4b61607853)
- zassume\_not\_null : [ztest\_assert.h](group__ztest__assume.md#ga24f4144edf5cef493c88872c7d56900e)
- zassume\_not\_ok : [ztest\_assert.h](group__ztest__assume.md#ga539831d2f42cc991a8295b388ec12846)
- zassume\_ok : [ztest\_assert.h](group__ztest__assume.md#ga9c6d1c701dd2d50027bf5e24b7567ae4)
- zassume\_true : [ztest\_assert.h](group__ztest__assume.md#ga6f5778ed8c1205126f7dcafb6eb26905)
- zassume\_within : [ztest\_assert.h](group__ztest__assume.md#gad808c91e07e6c27b2e28ec7e04e03854)
- ZBUS\_CHAN\_ADD\_OBS : [zbus.h](group__zbus__apis.md#gaf63215f3f53741edf52b4d0d7b2b97df)
- zbus\_chan\_add\_obs() : [zbus.h](group__zbus__apis.md#gaddd8ce480bc29ead4442e529915cfbf6)
- ZBUS\_CHAN\_ADD\_OBS\_WITH\_MASK : [zbus.h](group__zbus__apis.md#ga7f763caca474e6c910793d2c714f80b4)
- zbus\_chan\_claim() : [zbus.h](group__zbus__apis.md#ga00bfb7db54594029f4d288bcf5b56b3a)
- zbus\_chan\_const\_msg() : [zbus.h](group__zbus__apis.md#gafee07c355df9ac86b85e601196b56a10)
- ZBUS\_CHAN\_DECLARE : [zbus.h](group__zbus__apis.md#ga0662b2db8077a8075c07a3afd0161d0f)
- ZBUS\_CHAN\_DEFINE : [zbus.h](group__zbus__apis.md#ga29a3a39e5c78a34b2d8491615d1f0687)
- zbus\_chan\_finish() : [zbus.h](group__zbus__apis.md#ga74747affb345e68ce1d564c349409e59)
- zbus\_chan\_msg() : [zbus.h](group__zbus__apis.md#gaaf8b34113b7b993438bd42db64812572)
- zbus\_chan\_msg\_size() : [zbus.h](group__zbus__apis.md#ga8895a18b282ca2fe7528b4e5cf48e025)
- zbus\_chan\_name() : [zbus.h](group__zbus__apis.md#ga05a220636fc6bb58b97805e558b76d73)
- zbus\_chan\_notify() : [zbus.h](group__zbus__apis.md#ga6ec2f463801499e23a011fa4e68aa3e7)
- zbus\_chan\_pub() : [zbus.h](group__zbus__apis.md#gadfcaba65b397c1d8c31836ef3cf61244)
- zbus\_chan\_read() : [zbus.h](group__zbus__apis.md#ga8209721e0a295c84d112ba1a7171100e)
- zbus\_chan\_rm\_obs() : [zbus.h](group__zbus__apis.md#gaee11d7472a3f87156b8ef1dcfbe897c4)
- zbus\_chan\_user\_data() : [zbus.h](group__zbus__apis.md#gac0b0ed0356fca5a8b65a3332931a369a)
- zbus\_iterate\_over\_channels() : [zbus.h](group__zbus__apis.md#ga6dffd25f4eb368e773c2bd55f34a0e10)
- zbus\_iterate\_over\_channels\_with\_user\_data() : [zbus.h](group__zbus__apis.md#gab8df108b0238757ff631ec1e120fa2c3)
- zbus\_iterate\_over\_observers() : [zbus.h](group__zbus__apis.md#ga2fa50316993afc5807e9d707d664be14)
- zbus\_iterate\_over\_observers\_with\_user\_data() : [zbus.h](group__zbus__apis.md#ga2f4e39c500fed0a6bcfedb5dec3f797a)
- ZBUS\_LISTENER\_DEFINE : [zbus.h](group__zbus__apis.md#gabfc7be8298e76fe2f7ae628be30b8390)
- ZBUS\_LISTENER\_DEFINE\_WITH\_ENABLE : [zbus.h](group__zbus__apis.md#gace4ac9da0e1bab7ba72797783ded948f)
- ZBUS\_MSG\_INIT : [zbus.h](group__zbus__apis.md#ga4bf8c445814c1fcee9b9819a36bc9bd6)
- ZBUS\_MSG\_SUBSCRIBER\_DEFINE : [zbus.h](group__zbus__apis.md#ga07a0c2c428c9e4891e86a63a420b2268)
- ZBUS\_MSG\_SUBSCRIBER\_DEFINE\_WITH\_ENABLE : [zbus.h](group__zbus__apis.md#ga6089c1ae0dad91306f79d48a63b31785)
- zbus\_obs\_attach\_to\_thread() : [zbus.h](group__zbus__apis.md#gabecf160e4d468d0275ad79e22fd0fb5b)
- ZBUS\_OBS\_DECLARE : [zbus.h](group__zbus__apis.md#ga49f169c6d50a3bad57e1b319362d2924)
- zbus\_obs\_detach\_from\_thread() : [zbus.h](group__zbus__apis.md#ga493c125c31e44d5a222f0e9c6d01249e)
- zbus\_obs\_is\_chan\_notification\_masked() : [zbus.h](group__zbus__apis.md#ga41ae9799a52c2a7954500b0a3c78d19f)
- zbus\_obs\_is\_enabled() : [zbus.h](group__zbus__apis.md#ga9d1f5e1aecd8bd521d916944cece2b95)
- zbus\_obs\_name() : [zbus.h](group__zbus__apis.md#ga5bb33ec5b914e6cbc87fa70bf763ad15)
- zbus\_obs\_set\_chan\_notification\_mask() : [zbus.h](group__zbus__apis.md#ga9513264f912f54b60c4341642f578e5a)
- zbus\_obs\_set\_enable() : [zbus.h](group__zbus__apis.md#ga6b44a887c82cbceff3136bbd9e0aa91c)
- ZBUS\_OBSERVER\_LISTENER\_TYPE : [zbus.h](group__zbus__apis.md#gga88941281d7bdd24f3cfbb53e57711d8fa127f19c2121c9c512da9dbcbb301320c)
- ZBUS\_OBSERVER\_MSG\_SUBSCRIBER\_TYPE : [zbus.h](group__zbus__apis.md#gga88941281d7bdd24f3cfbb53e57711d8fa8151f9e58a5bd96449bd2f9f8695538c)
- ZBUS\_OBSERVER\_SUBSCRIBER\_TYPE : [zbus.h](group__zbus__apis.md#gga88941281d7bdd24f3cfbb53e57711d8fa22c784a85353545e8dca2ce7a0ec81b3)
- zbus\_observer\_type : [zbus.h](group__zbus__apis.md#ga88941281d7bdd24f3cfbb53e57711d8f)
- ZBUS\_OBSERVERS : [zbus.h](group__zbus__apis.md#gafed25f045c3b8d438daf4ebd5e517692)
- ZBUS\_OBSERVERS\_EMPTY : [zbus.h](group__zbus__apis.md#ga763dad07a1ae9bb38f9c240e1920caef)
- zbus\_sub\_wait() : [zbus.h](group__zbus__apis.md#ga84a65e276a01ef97eeb5c81b880da72b)
- zbus\_sub\_wait\_msg() : [zbus.h](group__zbus__apis.md#gaeffce45446509e488192a4e6442453fb)
- ZBUS\_SUBSCRIBER\_DEFINE : [zbus.h](group__zbus__apis.md#gac17a735cccecfc90f26127e48cf6279a)
- ZBUS\_SUBSCRIBER\_DEFINE\_WITH\_ENABLE : [zbus.h](group__zbus__apis.md#gaf56f71babe2bb27258f025332b80c58f)
- zdsp\_abs\_f16() : [basicmath\_f16.h](group__math__dsp__basic__abs.md#gaf178acd8862a2928a65e98f4fef1380b)
- zdsp\_abs\_f32() : [basicmath.h](group__math__dsp__basic__abs.md#ga5a5358fb90f726256f064757fbab1bcd)
- zdsp\_abs\_q15() : [basicmath.h](group__math__dsp__basic__abs.md#ga53ee6bbc05423703f6299fd60c8e1d44)
- zdsp\_abs\_q31() : [basicmath.h](group__math__dsp__basic__abs.md#ga74ccbbaf60257ca482fc96e1d40edeca)
- zdsp\_abs\_q7() : [basicmath.h](group__math__dsp__basic__abs.md#ga69c38809979de090a3458ec9b31f4cb4)
- zdsp\_add\_f16() : [basicmath\_f16.h](group__math__dsp__basic__add.md#ga3ad2849433440c2d1175cd6f18e6eade)
- zdsp\_add\_f32() : [basicmath.h](group__math__dsp__basic__add.md#gae890add140205717dcb4b1c39650b797)
- zdsp\_add\_q15() : [basicmath.h](group__math__dsp__basic__add.md#ga978af9251a9c8b8d62b47a921dcf9d38)
- zdsp\_add\_q31() : [basicmath.h](group__math__dsp__basic__add.md#gad2bbabc990f868b3ecfe270458e22657)
- zdsp\_add\_q7() : [basicmath.h](group__math__dsp__basic__add.md#gae5d919e8595e80216302953797fcf987)
- zdsp\_and\_u16() : [basicmath.h](group__math__dsp__basic__and.md#ga988879dc54666692130793f6ce26fd23)
- zdsp\_and\_u32() : [basicmath.h](group__math__dsp__basic__and.md#ga99019932e69574ca8aef86b4ace9c3b6)
- zdsp\_and\_u8() : [basicmath.h](group__math__dsp__basic__and.md#ga22c8c022d4f8cd9e34f1e1e47433d121)
- zdsp\_clip\_f16() : [basicmath\_f16.h](group__math__dsp__basic__clip.md#ga4edd7ba5b9c3791d7857a2c7d1541cab)
- zdsp\_clip\_f32() : [basicmath.h](group__math__dsp__basic__clip.md#gaa81f891d1946313161d1a2989aafe0e1)
- zdsp\_clip\_q15() : [basicmath.h](group__math__dsp__basic__clip.md#ga7c83f52241784bfdf81baf14581435b9)
- zdsp\_clip\_q31() : [basicmath.h](group__math__dsp__basic__clip.md#ga2a7483cb8150e3caee8fade382dc3ceb)
- zdsp\_clip\_q7() : [basicmath.h](group__math__dsp__basic__clip.md#ga4e368fccf4ec5f46e82127816ecfc22e)
- zdsp\_dot\_prod\_f16() : [basicmath\_f16.h](group__math__dsp__basic__dot.md#ga11af65d379fa201a04408544ddca8354)
- zdsp\_dot\_prod\_f32() : [basicmath.h](group__math__dsp__basic__dot.md#ga66932c50dc7e2b7207ad5c8218c110a6)
- zdsp\_dot\_prod\_q15() : [basicmath.h](group__math__dsp__basic__dot.md#ga5a76ac790b7d981b97143f7473587ccf)
- zdsp\_dot\_prod\_q31() : [basicmath.h](group__math__dsp__basic__dot.md#gaae752f1d9645d8c80fcdabc0f0b249f8)
- zdsp\_dot\_prod\_q7() : [basicmath.h](group__math__dsp__basic__dot.md#gaa6bdeed693734e5d1c7b93b58eaf9eeb)
- zdsp\_mult\_f16() : [basicmath\_f16.h](group__math__dsp__basic__mult.md#ga795bc69852005a0e547c3f2794c5397a)
- zdsp\_mult\_f32() : [basicmath.h](group__math__dsp__basic__mult.md#gac9513150fc602b6bab481faf36f81ca4)
- zdsp\_mult\_q15() : [basicmath.h](group__math__dsp__basic__mult.md#gaf8aa8d6e976c9ee5f4ac836506da3bc7)
- zdsp\_mult\_q31() : [basicmath.h](group__math__dsp__basic__mult.md#ga0e4e4ff5e33e792feecf811cb8e96d18)
- zdsp\_mult\_q7() : [basicmath.h](group__math__dsp__basic__mult.md#gae0792b036a40a19af1c25b3a6a23e988)
- zdsp\_negate\_f16() : [basicmath\_f16.h](group__math__dsp__basic__negate.md#ga7aacb425c3dfb2c5d8664a7cf4031c3b)
- zdsp\_negate\_f32() : [basicmath.h](group__math__dsp__basic__negate.md#gad8760ce77fcf2198f73813278fa15343)
- zdsp\_negate\_q15() : [basicmath.h](group__math__dsp__basic__negate.md#ga41dc3e0d8a0bd3654f74cbbd9038153d)
- zdsp\_negate\_q31() : [basicmath.h](group__math__dsp__basic__negate.md#ga08591323e804b4d7932c7bade4331705)
- zdsp\_negate\_q7() : [basicmath.h](group__math__dsp__basic__negate.md#ga578a3cee7cff2d818e41ec974066d55a)
- zdsp\_not\_u16() : [basicmath.h](group__math__dsp__basic__not.md#ga3bca20f3c626e1a64dd79d0e22a43bed)
- zdsp\_not\_u32() : [basicmath.h](group__math__dsp__basic__not.md#gafd6993acd6abeaa529dea84f3fd4d3a9)
- zdsp\_not\_u8() : [basicmath.h](group__math__dsp__basic__not.md#gaafd38edd648a03d328d51b5ca9097b5d)
- zdsp\_offset\_f16() : [basicmath\_f16.h](group__math__dsp__basic__offset.md#ga60d4ef0543308773e651a0f40b3b0fe1)
- zdsp\_offset\_f32() : [basicmath.h](group__math__dsp__basic__offset.md#ga1f14e702ad5dc6482fcdb4758ad862c3)
- zdsp\_offset\_q15() : [basicmath.h](group__math__dsp__basic__offset.md#ga1740996532090e41ce20913bb201023c)
- zdsp\_offset\_q31() : [basicmath.h](group__math__dsp__basic__offset.md#ga2b5958ec0fc8bb26662c41136ec46b3e)
- zdsp\_offset\_q7() : [basicmath.h](group__math__dsp__basic__offset.md#ga701b8bbd1437e0f19807c38fd4d0e7e9)
- zdsp\_or\_u16() : [basicmath.h](group__math__dsp__basic__or.md#ga979e50ef34a5e5c8dc28f1cfc5ef708a)
- zdsp\_or\_u32() : [basicmath.h](group__math__dsp__basic__or.md#gaa218930efe8ab83663eb00b4f6f170bc)
- zdsp\_or\_u8() : [basicmath.h](group__math__dsp__basic__or.md#gabf9687bce70f19c4192b2ddba7b0d2da)
- zdsp\_scale\_f16() : [basicmath\_f16.h](group__math__dsp__basic__scale.md#ga26c461531e82511c18902ba908f36230)
- zdsp\_scale\_f32() : [basicmath.h](group__math__dsp__basic__scale.md#ga3a07935285b763bb9e9106db42292466)
- zdsp\_scale\_q15() : [basicmath.h](group__math__dsp__basic__scale.md#ga95e03e993542ff1710c771a9dc0eb01b)
- zdsp\_scale\_q31() : [basicmath.h](group__math__dsp__basic__scale.md#ga63eaab2b1ef431e4bceb90b0a701c879)
- zdsp\_scale\_q7() : [basicmath.h](group__math__dsp__basic__scale.md#ga2158a3f20bd5af0516f5b3af824c32e1)
- zdsp\_shift\_q15() : [basicmath.h](group__math__dsp__basic__shift.md#ga738fc0fe86b9c910a30fceff7dc4a789)
- zdsp\_shift\_q31() : [basicmath.h](group__math__dsp__basic__shift.md#gaf9af89a3c76ad385eec0225185b522c9)
- zdsp\_shift\_q7() : [basicmath.h](group__math__dsp__basic__shift.md#ga8eb72ff139c173d3e1794a1d1c1c8fde)
- zdsp\_sub\_f16() : [basicmath\_f16.h](group__math__dsp__basic__sub.md#ga500f6403d4382bc797231d7962275230)
- zdsp\_sub\_f32() : [basicmath.h](group__math__dsp__basic__sub.md#gafc66edd5888b19174cb24c2ea858d24d)
- zdsp\_sub\_q15() : [basicmath.h](group__math__dsp__basic__sub.md#gab9698353b69654eefbd76ff6f723a4f3)
- zdsp\_sub\_q31() : [basicmath.h](group__math__dsp__basic__sub.md#ga693b9677fdf54694e49e03a9b629b35d)
- zdsp\_sub\_q7() : [basicmath.h](group__math__dsp__basic__sub.md#ga4eb67772a48933a9f24a68f73228adbf)
- zdsp\_xor\_u16() : [basicmath.h](group__math__dsp__basic__xor.md#gaa4d486a9a9022120e86e6e5d62940444)
- zdsp\_xor\_u32() : [basicmath.h](group__math__dsp__basic__xor.md#gac4dd8fed6e7485a0e989fb37b3fe0c77)
- zdsp\_xor\_u8() : [basicmath.h](group__math__dsp__basic__xor.md#ga4f5a442ce2ce79a6d09fde4648ceb100)
- ZEPHYR\_ARCH\_X86\_INCLUDE\_X86\_ACPI\_H\_ : [x86\_acpi\_osal.h](x86__acpi__osal_8h.md#ae9d75b39c455425398c1df34aa1d8f9f)
- zephyr\_basic\_group\_err\_code\_t : [zephyr\_basic.h](zephyr__basic_8h.md#ab466c726d85f3289b3a064d64169914c)
- ZEPHYR\_DRIVERS\_INTERRUPT\_CONTROLLER\_INTC\_RA\_ICU\_H\_ : [intc\_ra\_icu.h](intc__ra__icu_8h.md#a28f51943d0ae322da596758f4134a7b6)
- zephyr\_fputc() : [libc-hooks.h](libc-hooks_8h.md#ac5b3b7e59825b80ba65bb6346ee88e3c)
- ZEPHYR\_MGMT\_GRP\_BASIC : [mgmt\_defines.h](group__mcumgr__mgmt__api.md#gga81f98b9a0c3810f7d607b783f8e259b5ac09a1f1ff95f6a913c4c360f1631af68)
- ZEPHYR\_MGMT\_GRP\_BASIC\_CMD\_ERASE\_STORAGE : [zephyr\_basic.h](zephyr__basic_8h.md#a335d87c4927506ef1e5a52e3ae2b23d2)
- ZEPHYR\_MODEM\_BACKEND\_TTY\_ : [tty.h](modem_2backend_2tty_8h.md#a69a30337ca00de462fc67e47401334f4)
- ZEPHYR\_MODEM\_PPP\_ : [ppp.h](modem_2ppp_8h.md#a4c10bd93401ebba9cc89f81a6f9ab6f2)
- ZEPHYRBASIC\_MGMT\_ERR\_FLASH\_CONFIG\_QUERY\_FAIL : [zephyr\_basic.h](zephyr__basic_8h.md#ab466c726d85f3289b3a064d64169914ca7d6e0c3f222a93811317e1ba6809e53f)
- ZEPHYRBASIC\_MGMT\_ERR\_FLASH\_ERASE\_FAILED : [zephyr\_basic.h](zephyr__basic_8h.md#ab466c726d85f3289b3a064d64169914caa2abbcccf19a206dd04938d66ae21646)
- ZEPHYRBASIC\_MGMT\_ERR\_FLASH\_OPEN\_FAILED : [zephyr\_basic.h](zephyr__basic_8h.md#ab466c726d85f3289b3a064d64169914cadf1c7bf6b4b8aa33c5b2669449200362)
- ZEPHYRBASIC\_MGMT\_ERR\_OK : [zephyr\_basic.h](zephyr__basic_8h.md#ab466c726d85f3289b3a064d64169914ca702e02a1122d1c119bf75a41f55e2681)
- ZEPHYRBASIC\_MGMT\_ERR\_UNKNOWN : [zephyr\_basic.h](zephyr__basic_8h.md#ab466c726d85f3289b3a064d64169914ca216aefbd7a6da787225bcb18c26e41d2)
- zero\_actlr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a9d0a4c92976b7169af4d8632cf76a908)
- zero\_actlr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a544291a0aed0b6fd63cbc10ca511dd4e)
- zero\_actlr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#ad4cbd8cea7f279d4556d18a5a0de035f)
- zero\_ccsidr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a14cde62648f289f4e330653282068948)
- zero\_clidr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a5738a6628093de5b477a1fd686d1bad6)
- zero\_cntfrq\_el0() : [lib\_helpers.h](4_2lib__helpers_8h.md#a83d8fbdb70b99aee5ab70df31ba63333)
- zero\_cnthctl\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#adc8984d71461fe51910e00372b53f5a8)
- zero\_cnthp\_ctl\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a448135ab8d154c27e5021e1bef0e9c1e)
- zero\_cnthps\_ctl\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#acea9c5d416e6fe66c38fcc718022782c)
- zero\_cntv\_ctl\_el0() : [lib\_helpers.h](4_2lib__helpers_8h.md#aa8aa05240d19d14d5e70a99de4fb67f5)
- zero\_cntv\_cval\_el0() : [lib\_helpers.h](4_2lib__helpers_8h.md#a412856bdac39d9eed4b6ee9b317293da)
- zero\_cntvct\_el0() : [lib\_helpers.h](4_2lib__helpers_8h.md#a9cc0a9484766d3309a44e0ea12ef4b72)
- zero\_cntvoff\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a7291a4b003a0a0b51d5adefc8f6c5dca)
- zero\_cpacr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#afdab5fb96d87973187821af88ef6614a)
- zero\_cpacr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a3d227735ad0ce38beba2a7b38f64a53e)
- zero\_cpacr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#aba83d3adaa1a6f1ee0d7d16e85693164)
- zero\_cptr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#af92cb1be4eabd19500705f4edad0e633)
- zero\_cptr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#afe907102e849035a4e7a6cbb45cb82cf)
- zero\_cptr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#ab69b4a9149bda5f3749841dbd8565153)
- zero\_csselr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#acad4e29b5acfc5dd6de664e628b6ff0b)
- zero\_currentel() : [lib\_helpers.h](4_2lib__helpers_8h.md#a0335454d266fe275bbfc1fb369dc180c)
- zero\_daif() : [lib\_helpers.h](4_2lib__helpers_8h.md#a5c120f01dfacb589426c63149bbfdd59)
- zero\_elr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#aba615d905fb7dce97b21f2d3945160da)
- zero\_elr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#ad58df1b3866b2c56303367da1e0306a8)
- zero\_elr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#a7ddbe89d4f6dca3149b241ad63fd17a7)
- zero\_esr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#ad567d2f1d4318e0ad33769bf57d4728a)
- zero\_esr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a04965615eb6b62d5db385ecf5eb7ca5e)
- zero\_esr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#aaa751dce577da4b34856a02ae07f70ce)
- zero\_far\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a80db586ae600d6b16c3bdeaa9a0bead5)
- zero\_far\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a4373a039fcb45de9ed994899ca3ea5fd)
- zero\_far\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#add7899adce220589e834f1c96085a080)
- ZERO\_FRAME : [seagate\_legend\_b1414.h](seagate__legend__b1414_8h.md#ada4655bb5f9b877b2cf6e48206abf5d1)
- zero\_hcr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a57ad54df026a7de567ea5f38518635e8)
- zero\_id\_aa64mmfr0\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a501b8e19a696c397e6c19d1ef39f8010)
- zero\_id\_aa64pfr0\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a20de9972f3531bbfc5efdd18bc16ae66)
- zero\_mair\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a877cf34c4e464127d5d0f973c74e3bd2)
- zero\_mair\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#aef3c4bbd1bc5d0e35bcf237d91aff4bf)
- zero\_mair\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#a55841460807ef7be743a01bd5fe79a85)
- zero\_mpidr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a03fe05f9ce93c82be71057851d57833f)
- ZERO\_OR\_COMPILE\_ERROR : [util.h](group__sys-util.md#ga831cb8468911b8ebdb9b42682778e53d)
- zero\_par\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a0f9320e47d0b6e20fd894ecad7b486ae)
- zero\_scr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#a6434e5b4d4406b1c7f946909e9192488)
- zero\_sctlr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#af22552720c6ce81f89e5723fe477b828)
- zero\_sctlr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a2a189bbf13c45fa8005fa7dc402e9f9f)
- zero\_sctlr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#a75ea7c1920c095ed1ea51427d3b9f691)
- zero\_sp\_el0() : [lib\_helpers.h](4_2lib__helpers_8h.md#aeede39e9c92abbeafe7226ce3e979b52)
- zero\_spsr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#ac7909e27205fd526b6dc921d88e0aea8)
- zero\_spsr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a6400f2fb4d0c473db6bce81e6bcd8d18)
- zero\_spsr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#aed0c4b734bb27fb8e439bdeee11b1a03)
- zero\_sysreg : [lib\_helpers.h](4_2lib__helpers_8h.md#a71bba9d3a17e4940df59c934c24910c2)
- zero\_tcr\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#acadfba11f4bef94472510ba611f451d7)
- zero\_tcr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#aa7dd303c9422ebfeacdecac6e3dae683)
- zero\_tcr\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#a0d6badd9b7e7349d96065fe766008912)
- zero\_tpidrro\_el0() : [lib\_helpers.h](4_2lib__helpers_8h.md#a53ade2bfc6ec5e26f3ecd7fd75b3b277)
- zero\_ttbr0\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#a818f887e590c29f38e9f4bf4cba3b058)
- zero\_ttbr0\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#a764d074cdadfc74bb2f5d8cb8a3dcf3a)
- zero\_ttbr0\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#ac7a66025567c1c99bc6618760e054b96)
- zero\_vbar\_el1() : [lib\_helpers.h](4_2lib__helpers_8h.md#af090c3b30e472a3bacf168b495d4e61d)
- zero\_vbar\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#ac4250db263683908b1b9390961d4a97b)
- zero\_vbar\_el3() : [lib\_helpers.h](4_2lib__helpers_8h.md#a061496958b38c81bfad70838d76f186b)
- zero\_vmpidr\_el2() : [lib\_helpers.h](4_2lib__helpers_8h.md#ab5800085de000d3b0f0f0b1e09cacfe1)
- zexpect : [ztest\_assert.h](group__ztest__assert.md#ga7bd837a8164123e3a06795b9f87a308d)
- zexpect\_between\_inclusive : [ztest\_assert.h](group__ztest__expect.md#gac37ebea6a9c71e3666a4911ceea5c913)
- zexpect\_equal : [ztest\_assert.h](group__ztest__expect.md#ga5ba65dbf95c204ed60694c5757db247f)
- zexpect\_equal\_ptr : [ztest\_assert.h](group__ztest__expect.md#gabf791d13c5781fc2215289d6dd925b3e)
- zexpect\_false : [ztest\_assert.h](group__ztest__expect.md#ga619bd320e39799414383a228dc2d8299)
- zexpect\_is\_null : [ztest\_assert.h](group__ztest__expect.md#ga10b2c904f1c68b816eae2ad53e2b9f90)
- zexpect\_mem\_equal : [ztest\_assert.h](group__ztest__expect.md#gaee52264e5f92a606a2a85f5fbb0a85fb)
- zexpect\_not\_equal : [ztest\_assert.h](group__ztest__expect.md#ga31d83ab89828a03aebe0d0dc003f5232)
- zexpect\_not\_null : [ztest\_assert.h](group__ztest__expect.md#gaa51053fe2a07c6417db7952d7a594798)
- zexpect\_not\_ok : [ztest\_assert.h](group__ztest__expect.md#gabde5406775f05d5fcd135eb926969004)
- zexpect\_ok : [ztest\_assert.h](group__ztest__expect.md#gaab325ee22058252c6a1c3243f3226657)
- zexpect\_true : [ztest\_assert.h](group__ztest__expect.md#gaef66b2764b6086dfbe8cbc933a8cfdc3)
- zexpect\_within : [ztest\_assert.h](group__ztest__expect.md#ga907afb07269bbc444a3d8ffee46839b5)
- ZFD\_IOCTL\_FIONBIO : [fdtable.h](fdtable_8h.md#aac8cb8bde69d227a7a8e9edf2980bd20a7c70aef3ad6110cbdfa3bd4f843ec530)
- ZFD\_IOCTL\_FIONREAD : [fdtable.h](fdtable_8h.md#aac8cb8bde69d227a7a8e9edf2980bd20a34b26658321074989ee1db15aab5f683)
- ZFD\_IOCTL\_FSYNC : [fdtable.h](fdtable_8h.md#aac8cb8bde69d227a7a8e9edf2980bd20a50a53736aa4724d43363b8b0b1986ca4)
- ZFD\_IOCTL\_LSEEK : [fdtable.h](fdtable_8h.md#aac8cb8bde69d227a7a8e9edf2980bd20a5b7369d570c761ce85e6bd50a17eb072)
- ZFD\_IOCTL\_POLL\_OFFLOAD : [fdtable.h](fdtable_8h.md#aac8cb8bde69d227a7a8e9edf2980bd20a901693ab4461b170c2da08c7518ddbbe)
- ZFD\_IOCTL\_POLL\_PREPARE : [fdtable.h](fdtable_8h.md#aac8cb8bde69d227a7a8e9edf2980bd20a41846852df9ee3d5dba7b0051e94945e)
- ZFD\_IOCTL\_POLL\_UPDATE : [fdtable.h](fdtable_8h.md#aac8cb8bde69d227a7a8e9edf2980bd20a9e7250eac0c568051f35ab086b560eaa)
- ZFD\_IOCTL\_SET\_LOCK : [fdtable.h](fdtable_8h.md#aac8cb8bde69d227a7a8e9edf2980bd20a2920c62c09c574b21a58a6cf98017b62)
- zperf\_callback : [zperf.h](group__zperf.md#gaffeb2d7cbca61021984e784f7ba4595b)
- ZPERF\_SESSION\_ERROR : [zperf.h](group__zperf.md#gga073cc81d6fd201d09e7d1e712927f7cba6e2f47cdc1e2b67eede67a378ee5ed95)
- ZPERF\_SESSION\_FINISHED : [zperf.h](group__zperf.md#gga073cc81d6fd201d09e7d1e712927f7cba230ffe541f46d28b19ce4ed66b5f9607)
- ZPERF\_SESSION\_STARTED : [zperf.h](group__zperf.md#gga073cc81d6fd201d09e7d1e712927f7cba837674d9cb7309c80bf4dac2446667d8)
- zperf\_status : [zperf.h](group__zperf.md#ga073cc81d6fd201d09e7d1e712927f7cb)
- zperf\_tcp\_download() : [zperf.h](group__zperf.md#ga9ac136e27fc87f85ddb66cbd2f78256d)
- zperf\_tcp\_download\_stop() : [zperf.h](group__zperf.md#gac29193fb02ccb159b7adc3c8de64895a)
- zperf\_tcp\_upload() : [zperf.h](group__zperf.md#ga24c061ea0dcd44b94c2ad79dfa264e44)
- zperf\_tcp\_upload\_async() : [zperf.h](group__zperf.md#ga07704e0bd701c0f2da2b74b9a83d6b35)
- zperf\_udp\_download() : [zperf.h](group__zperf.md#gaae9e5669a76da0cde7454bbd7b491a4a)
- zperf\_udp\_download\_stop() : [zperf.h](group__zperf.md#ga394e3a10550cf9d0a435f5d217dfbbdf)
- zperf\_udp\_upload() : [zperf.h](group__zperf.md#ga6f2704914a9a577dac119a11f98c0e8e)
- zperf\_udp\_upload\_async() : [zperf.h](group__zperf.md#gacf57dcebd09cae8ecf61b553baf6b2cd)
- ZRESTRICT : [common.h](common_8h.md#a39314fd705c5a9ed45b671ca36f883fd)
- zsock\_accept() : [socket.h](group__bsd__sockets.md#ga25c993772f26b872e7ed16c4ae2349fb)
- zsock\_bind() : [socket.h](group__bsd__sockets.md#ga3d3258fc59ab566eab03e0f51da1556a)
- zsock\_close() : [socket.h](group__bsd__sockets.md#gae60d7ca486955dd79a2821d1f646c349)
- zsock\_connect() : [socket.h](group__bsd__sockets.md#ga1a70b1d3616341a86977835cc853d81d)
- zsock\_fcntl() : [socket.h](group__bsd__sockets.md#ga13471854ca4279a157fe43ec030ea34d)
- ZSOCK\_FD\_CLR() : [socket\_select.h](group__bsd__sockets.md#gadcc17ac3947722e684a543e055b8c1e5)
- ZSOCK\_FD\_ISSET() : [socket\_select.h](group__bsd__sockets.md#ga24808b7adec4970eb0981b24e9313aab)
- ZSOCK\_FD\_SET() : [socket\_select.h](group__bsd__sockets.md#ga9a6044b408c0ef80336e957cd47d5f25)
- zsock\_fd\_set : [socket\_select.h](group__bsd__sockets.md#ga1fcb157f9f7dece784f5d2c0cb2efb77)
- ZSOCK\_FD\_SETSIZE : [socket\_select.h](group__bsd__sockets.md#ga5c88da69b8d9401d3ae02495056f7e23)
- ZSOCK\_FD\_ZERO() : [socket\_select.h](group__bsd__sockets.md#gae9c3555c2fc74b8a88ea5909a2d02afb)
- zsock\_freeaddrinfo() : [socket.h](group__bsd__sockets.md#ga7953da2e52bcfad51b877de6d7fd6cc9)
- zsock\_gai\_strerror() : [socket.h](group__bsd__sockets.md#gaa9d9e97c347b3854dc73d7ba33d8ca4b)
- zsock\_getaddrinfo() : [socket.h](group__bsd__sockets.md#gaf59c97c9bd07f188e3f06b2372ac1856)
- zsock\_gethostname() : [socket.h](group__bsd__sockets.md#ga8b348d886f1bc4f4cdf6e2260844f6e1)
- zsock\_getnameinfo() : [socket.h](group__bsd__sockets.md#gae9375bc6a1e945e5486f40c0198e3505)
- zsock\_getpeername() : [socket.h](group__bsd__sockets.md#ga0564ad1c0fb53d4fc74619ca54bf28f2)
- zsock\_getsockname() : [socket.h](group__bsd__sockets.md#gaa0270d771e51dbf2a91bea5b24bf26c1)
- zsock\_getsockopt() : [socket.h](group__bsd__sockets.md#ga56cb8d34d4b9599c3d2965c97da80a30)
- zsock\_inet\_ntop() : [socket.h](group__bsd__sockets.md#gae3092504b98d3b5f28675081a1e5b1ab)
- zsock\_inet\_pton() : [socket.h](group__bsd__sockets.md#gae4cf68b3752057b4b0818394487a2dbb)
- zsock\_ioctl() : [socket.h](group__bsd__sockets.md#gac1c236bd929110eb4fa31c34fa6bf21a)
- zsock\_listen() : [socket.h](group__bsd__sockets.md#gae8ea59ea82063aa28a9b72da2f08c9fd)
- ZSOCK\_MSG\_CTRUNC : [socket.h](group__bsd__sockets.md#gabdc593f541a4f9a607cfe140cee19c4a)
- ZSOCK\_MSG\_DONTWAIT : [socket.h](group__bsd__sockets.md#ga92cf4460e23f376bf130d885ea64ed6b)
- ZSOCK\_MSG\_PEEK : [socket.h](group__bsd__sockets.md#gae7da123a40584192b65af77e918080b9)
- ZSOCK\_MSG\_TRUNC : [socket.h](group__bsd__sockets.md#gae594c5e74cd473df8e3328a4cd935ce1)
- ZSOCK\_MSG\_WAITALL : [socket.h](group__bsd__sockets.md#ga00b950f50302d97c27111da49f5289fb)
- zsock\_poll() : [socket.h](group__bsd__sockets.md#gaa946975d9892a0ad730b6bf7090267cf)
- ZSOCK\_POLLERR : [socket.h](group__bsd__sockets.md#gad44368a112fbf91436a2439e7b767641)
- ZSOCK\_POLLHUP : [socket.h](group__bsd__sockets.md#gadd341cd5c1f6d7deeaedc5c58dc56fe7)
- ZSOCK\_POLLIN : [socket.h](group__bsd__sockets.md#ga6ade0deb4952e1ea23b368d9eceee9ed)
- ZSOCK\_POLLNVAL : [socket.h](group__bsd__sockets.md#ga45c5b0efca6e09e4f7db78d1d007bf67)
- ZSOCK\_POLLOUT : [socket.h](group__bsd__sockets.md#ga9ca302c64dfb676798ce03100894ca3e)
- ZSOCK\_POLLPRI : [socket.h](group__bsd__sockets.md#ga1c96c16d5000db0fa4b69055ebb97839)
- zsock\_recv() : [socket.h](group__bsd__sockets.md#ga8a7d82cfb02a45de59ccd05614eb78d6)
- zsock\_recvfrom() : [socket.h](group__bsd__sockets.md#gaca71732c883880c6fdcc7eb8e1c28932)
- zsock\_recvmsg() : [socket.h](group__bsd__sockets.md#gac8d659bad72d651265c8cd0b69e678c0)
- zsock\_select() : [socket\_select.h](group__bsd__sockets.md#ga265b8fc197a7a79102bdce4875bbb045)
- zsock\_send() : [socket.h](group__bsd__sockets.md#ga2d8c2173986f67dde6dc5721bf690855)
- zsock\_sendmsg() : [socket.h](group__bsd__sockets.md#gadb708a068afed401e1354aac885c787e)
- zsock\_sendto() : [socket.h](group__bsd__sockets.md#ga17a68983c5fc16cef968b3e7cecff089)
- zsock\_setsockopt() : [socket.h](group__bsd__sockets.md#gad123f59d8c86bf187054c80ff743b4eb)
- ZSOCK\_SHUT\_RD : [socket.h](group__bsd__sockets.md#ga2a58cbc62db1e559898ea979454d74d4)
- ZSOCK\_SHUT\_RDWR : [socket.h](group__bsd__sockets.md#ga788dcff81663a9fb01e32b53bca13e2d)
- ZSOCK\_SHUT\_WR : [socket.h](group__bsd__sockets.md#ga87630f1abe81c4e33a24cb1f1ebb3571)
- zsock\_shutdown() : [socket.h](group__bsd__sockets.md#gac56432bf901efaf8ef782430ac143f03)
- zsock\_socket() : [socket.h](group__bsd__sockets.md#ga5693d19a0bdff45a5cb09227683d8631)
- zsock\_socketpair() : [socket.h](group__bsd__sockets.md#ga1f5e089c9fb39d3a8884502a11e389b3)
- zsock\_timeval : [socket\_types.h](group__bsd__sockets.md#ga0fa9dd4796261813b164fed42303e4ee)
- ZTEST : [ztest\_test.h](group__ztest__test.md#gac25858f76ea667d07de422a3b489cb15)
- ZTEST\_BMEM : [ztest\_test.h](ztest__test_8h.md#ac3de5965061b1164a8033712c9094e23)
- ztest\_check\_expected\_data : [ztest\_mock.h](group__ztest__mock.md#ga805cf99272f147beeeee5ad6ca2553f5)
- ztest\_check\_expected\_value : [ztest\_mock.h](group__ztest__mock.md#gae9af6ba8e51738e938763c896f17ea8f)
- ztest\_copy\_return\_data : [ztest\_mock.h](group__ztest__mock.md#ga12872a3d783d53d564ed94583bc490b0)
- ZTEST\_DMEM : [ztest\_test.h](ztest__test_8h.md#a2c7d0aa85e7f320d582395c5ded90133)
- ztest\_expect\_data : [ztest\_mock.h](group__ztest__mock.md#gac1a64d8bf9c877e8666e0c6d93b0dbab)
- ZTEST\_EXPECT\_FAIL : [ztest\_test.h](ztest__test_8h.md#aeaa5b96855dd45e015b9556212f8945a)
- ZTEST\_EXPECT\_SKIP : [ztest\_test.h](ztest__test_8h.md#acb6f06920e522b9a9f6e7a98f0620f38)
- ztest\_expect\_value : [ztest\_mock.h](group__ztest__mock.md#ga58c2f0c0e628e73a2268a3d18b0440d6)
- ztest\_expected\_result : [ztest\_test.h](ztest__test_8h.md#af4dfaad1b5f1059e87f406979769aa26)
- ZTEST\_EXPECTED\_RESULT\_FAIL : [ztest\_test.h](ztest__test_8h.md#af4dfaad1b5f1059e87f406979769aa26a4d372c4fae4866c909e666173fa5be1d)
- ZTEST\_EXPECTED\_RESULT\_SKIP : [ztest\_test.h](ztest__test_8h.md#af4dfaad1b5f1059e87f406979769aa26a66f3e9393dbe9ca2607187a209e29b8a)
- ZTEST\_F : [ztest\_test.h](group__ztest__test.md#gacd3ab522e0e5c8a270e86b0cb6bd81b2)
- ztest\_get\_return\_value : [ztest\_mock.h](group__ztest__mock.md#ga31dcd5b5a3596a7404a771a2d32f3a39)
- ztest\_get\_return\_value\_ptr : [ztest\_mock.h](group__ztest__mock.md#gaa2df2eaeba49019b7a83ac769ea95968)
- ztest\_mem\_partition : [ztest\_test.h](ztest__test_8h.md#a3adced2fdda96833e6b1ecbf3d61d446)
- ztest\_phase : [ztest\_test.h](ztest__test_8h.md#a5dde8913cf45656bca8a48c825a95d59)
- ztest\_relative\_filename() : [ztest\_assert.h](ztest__assert_8h.md#a06a081e3d716be7e024973cbf305c14b)
- ztest\_result : [ztest\_test.h](ztest__test_8h.md#ac2842295307e7286d256bb179be60b02)
- ZTEST\_RESULT\_FAIL : [ztest\_test.h](ztest__test_8h.md#ac2842295307e7286d256bb179be60b02aa29639fb74516d8d112b9dade2422888)
- ZTEST\_RESULT\_PASS : [ztest\_test.h](ztest__test_8h.md#ac2842295307e7286d256bb179be60b02a92cec4e702d9d4502e02f76c7071211e)
- ZTEST\_RESULT\_PENDING : [ztest\_test.h](ztest__test_8h.md#ac2842295307e7286d256bb179be60b02a8dac9ba9321cd8d0a3a61b52cbdb4cfc)
- ZTEST\_RESULT\_SKIP : [ztest\_test.h](ztest__test_8h.md#ac2842295307e7286d256bb179be60b02a07327a99dd9daf709d9a28a5ea8316c4)
- ZTEST\_RESULT\_SUITE\_FAIL : [ztest\_test.h](ztest__test_8h.md#ac2842295307e7286d256bb179be60b02ac09ff18a766e298ede6f7746f4704c55)
- ZTEST\_RESULT\_SUITE\_SKIP : [ztest\_test.h](ztest__test_8h.md#ac2842295307e7286d256bb179be60b02af5927209b63a89467df81ad9de245b5e)
- ztest\_return\_data : [ztest\_mock.h](group__ztest__mock.md#gac79d097a6b274b25286f2b0e80fbd6e9)
- ztest\_returns\_value : [ztest\_mock.h](group__ztest__mock.md#ga2ec539b4c0f3e4efb695213b4fd08c2c)
- ZTEST\_RULE : [ztest\_test.h](group__ztest__test.md#ga2a0a5e3b6e8fa1c9a03e7600895d875f)
- ztest\_rule\_cb : [ztest\_test.h](group__ztest__test.md#ga2090c493018a95112b89c5f83b5d8162)
- ztest\_run\_all() : [ztest\_test.h](ztest__test_8h.md#ac6b1f8b820cd682094b7aaeebdaa106e)
- ztest\_run\_test\_suite : [ztest\_test.h](group__ztest__test.md#ga29557673d07a87d5d4ace36521937848)
- ztest\_run\_test\_suites() : [ztest\_test.h](ztest__test_8h.md#aafb3cba3a9637839952b2db2486ab88c)
- ZTEST\_SECTION : [ztest\_test.h](ztest__test_8h.md#a44777f5011728bbff63fe3639c1b4aa8)
- ztest\_simple\_1cpu\_after() : [ztest\_test.h](group__ztest__test.md#gaa53486873430dd8fa978745d8a1d0686)
- ztest\_simple\_1cpu\_before() : [ztest\_test.h](group__ztest__test.md#gac7ddc33b5a0d11e2ffa0a564019c5e3d)
- ztest\_skip\_failed\_assumption() : [ztest\_assert.h](ztest__assert_8h.md#a17537c79021fbc12e56b72ccec4b99c5), [ztest\_test.h](group__ztest__test.md#ga17537c79021fbc12e56b72ccec4b99c5)
- ZTEST\_SUITE : [ztest\_test.h](ztest__test_8h.md#aef8892743e2d47c983efcb61beeedeb3)
- ztest\_suite\_after\_t : [ztest\_test.h](ztest__test_8h.md#a0f9eeb8ddae455c1e7cc7a388a7b013c)
- ztest\_suite\_before\_t : [ztest\_test.h](ztest__test_8h.md#ac8a204832c267fed047e7707b65be74d)
- ZTEST\_SUITE\_COUNT : [ztest\_test.h](ztest__test_8h.md#a678b4ae96879c029e6e567a326bbf027)
- ztest\_suite\_predicate\_t : [ztest\_test.h](ztest__test_8h.md#ad5323aa82773dac33cf0930e9524420c)
- ztest\_suite\_setup\_t : [ztest\_test.h](ztest__test_8h.md#a0063907dd70b9eb817ea472162693ee4)
- ztest\_suite\_teardown\_t : [ztest\_test.h](ztest__test_8h.md#a7769b894fdac5283ac949ce8fceea0dd)
- ZTEST\_TEST\_COUNT : [ztest\_test.h](ztest__test_8h.md#a8777ca60bd21cc128f64833bd7921b9c)
- ztest\_test\_expect\_fail() : [ztest\_assert.h](ztest__assert_8h.md#a5c6bb493c88f7426a827889526dc0772)
- ztest\_test\_fail() : [ztest\_assert.h](ztest__assert_8h.md#acd6eb423f54dce8544f7c3b1618c0374), [ztest\_test.h](group__ztest__test.md#gacd6eb423f54dce8544f7c3b1618c0374)
- ztest\_test\_pass() : [ztest\_test.h](group__ztest__test.md#ga085d30a04102ebb8c3f2206020723ee0)
- ztest\_test\_skip() : [ztest\_assert.h](ztest__assert_8h.md#ada3b1fcfa71db1bf7787c03ff45256d5), [ztest\_test.h](group__ztest__test.md#gada3b1fcfa71db1bf7787c03ff45256d5)
- ZTEST\_USER : [ztest\_test.h](group__ztest__test.md#ga7121acc7ee00646cacefa773ff9631c8)
- ZTEST\_USER\_F : [ztest\_test.h](group__ztest__test.md#ga12ccce144e577cac6ba763982ad14def)
- ztest\_verify\_all\_test\_suites\_ran() : [ztest\_test.h](ztest__test_8h.md#a349fda278dff713debfd2a3b94b8b1eb)
- ztress\_abort() : [ztress.h](group__ztest__ztress.md#ga57f171e230fba462b3dea6b2d3cf71f6)
- ZTRESS\_CONTEXT\_INITIALIZER : [ztress.h](group__ztest__ztress.md#gab5e8bbcecd77db06e7a90631fc0c202b)
- ztress\_exec\_count() : [ztress.h](group__ztest__ztress.md#ga99eeabcc672fc5ec0b83ce5b8fb4ec5b)
- ZTRESS\_EXECUTE : [ztress.h](group__ztest__ztress.md#ga6acc3a50e0eff7360873006482f5c8e9)
- ztress\_execute() : [ztress.h](group__ztest__ztress.md#gaf706f1af4c42f5925d7545dadf5548fd)
- ztress\_handler : [ztress.h](group__ztest__ztress.md#ga633439263754bf08baee06c37dddab40)
- ZTRESS\_ID\_K\_TIMER : [ztress.h](ztress_8h.md#a937803e1398db7d0e10ea60c9c9ef642)
- ZTRESS\_ID\_THREAD : [ztress.h](ztress_8h.md#a8752d529cfc4d77b1dd71c4572fd63c3)
- ztress\_optimized\_ticks() : [ztress.h](group__ztest__ztress.md#gacbbdb8e7bad532d6dd20c486b3256e21)
- ztress\_preempt\_count() : [ztress.h](group__ztest__ztress.md#ga4406b828d170bc19065aaf65aeb4613e)
- ztress\_report() : [ztress.h](group__ztest__ztress.md#gaf4db2092eee17d863c9810333ba4c870)
- ztress\_set\_timeout() : [ztress.h](group__ztest__ztress.md#ga5b3069bb2aa35ddc64c46c18d2e30091)
- ZTRESS\_THREAD : [ztress.h](group__ztest__ztress.md#gaed561641541e8ced6866f2f1227f21c0)
- ZTRESS\_TIMER : [ztress.h](group__ztest__ztress.md#gabab05b8db44a7024ce23cb34bf999e42)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
